# django-first-proj

./: .gitignore  manage.py  pyproject.toml
django_first_proj/: asgi.py  settings.py  urls.py  wsgi.py
polls/: tests.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: index.html
