[tool.poetry]
name = "django-first-proj"
version = "0.1.0"
description = ""
authors = ["Evgenii Danilov <evgenii_danilov@epam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
django-debug-toolbar = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
